2003-09-24  JP Rosevear  <jpr@ximian.com>

	* conduits/*/*.c: adjust to new timezone api calls

	* gui/*.c: ditto

	* gui/dialogs/*.c: ditto

	* cal-client/cal-listener.h: add new signals

	* cal-client/cal-listener.c (convert_status): convert invalid
	object as well
	(impl_notifyTimezoneRequested): implement
	(impl_notifyDefaultTimezoneSet): ditto
	(cal_listener_class_init): set epv implementations for timezone
	functions
	(cal_listener_class_init): create timezone response signals

	* cal-client/cal-client.h: update protos

	* cal-client/cal-client.c: fix return values all over the place
	(cal_get_timezone_cb): getTimezone response
	(cal_query_cb): setDefaultTimezone response
	(cal_client_init): listen for new response signals
	(cal_client_get_timezone): implement using new thread sync api
	(cal_client_ensure_timezone_on_server): use add timezone call
	(cal_client_set_default_timezone): oimplement using new thread sync
	api

	* cal-client/cal-client-types.h: add invalid object status code

	* idl/evolution-calendar.idl: getQuery no longer raises any user
	exceptions, remove dead types and exceptions

2003-09-24  JP Rosevear <jpr@ximian.com>

	* pcs/cal.h: new protos

	* pcs/cal.c (impl_Cal_getTimezone): call backend implementation
	(impl_Cal_addTimezone): ditto
	(impl_Cal_setDefaultTimezone): ditto
	(cal_class_init): set epv implementations of timezone functions
	(cal_notify_timezone_requested): notify of get timezone response
	(cal_notify_default_timezone_set): notify of default timezone
	being set

	* pcs/cal-backend.h: new vmethods, protos

	* pcs/cal-backend.c (cal_backend_class_init): init new timezone
	vmethods
	(cal_backend_get_timezone): call through
	(cal_backend_set_default_timezone): ditto
	(cal_backend_add_timezone): ditto
	(cal_backend_internal_get_default_timezone): ditto
	(cal_backend_internal_get_timezone): ditto

	* pcs/cal-backend-sync.h: add vmethods, protos

	* pcs/cal-backend-sync.c (cal_backend_sync_get_timezone): call
	through