@@ -26,36 +26,6 @@
 
 static EAccountList *accounts;
 
-void
-cal_backend_util_fill_alarm_instances_seq (GNOME_Evolution_Calendar_CalAlarmInstanceSeq *seq,
-					   GSList *alarms)
-{
-	int n_alarms;
-	GSList *l;
-	int i;
-
-	g_return_if_fail (seq != NULL);
-
-	n_alarms = g_slist_length (alarms);
-
-	CORBA_sequence_set_release (seq, TRUE);
-	seq->_length = n_alarms;
-	seq->_buffer = CORBA_sequence_GNOME_Evolution_Calendar_CalAlarmInstance_allocbuf (n_alarms);
-
-	for (l = alarms, i = 0; l; l = l->next, i++) {
-		CalAlarmInstance *instance;
-		GNOME_Evolution_Calendar_CalAlarmInstance *corba_instance;
-
-		instance = l->data;
-		corba_instance = seq->_buffer + i;
-
-		corba_instance->auid = CORBA_string_dup (instance->auid);
-		corba_instance->trigger = (long) instance->trigger;
-		corba_instance->occur_start = (long) instance->occur_start;
-		corba_instance->occur_end = (long) instance->occur_end;
-	}
-}
-
 gboolean
 cal_backend_mail_account_get_default (EConfigListener *db,
 				      char **address,
